--- a/README.rdoc
+++ b/README.rdoc
@@ -1,16 +1,14 @@
 = rubybenchmark
 
-Description goes here.
+This gem performs a simple benchmark to test Ruby performance on your machine.
 
-== Note on Patches/Pull Requests
- 
-* Fork the project.
-* Make your feature addition or bug fix.
-* Add tests for it. This is important so I don't break it in a
-  future version unintentionally.
-* Commit, do not mess with rakefile, version, or history.
-  (if you want to have your own version, that is fine but bump version in a commit by itself I can ignore when I pull)
-* Send me a pull request. Bonus points for topic branches.
+It originated in a thread on the German Ruby forum: http://forum.ruby-portal.de/viewtopic.php?t=11893
+
+== Running the benchmark
+
+is simple:
+
+ rubybenchmark
 
 == Copyright
 
